--- a/Activities/Activity_4/index.html
+++ b/Activities/Activity_4/index.html
@@ -30,7 +30,7 @@
     </header>
     <section id="about">
         <div class="container">
-            <img src="images/profile.jpeg" alt="profile photo">
+            <img src="images/profile.jpeg" alt="profile photo" height="400" width = "290">
             <h1>Benjamin Brown</h1>
             <p style="font-family: 'Courier New', Courier, monospace; color: brown">Game Developer</p>
             <p>I am a Unity game developer working for my own studio, Boku Studios.
